# Financial_Analyst

./: .gitignore  README.md  base_agent.py  company_analysis.py  config.py  main.py  main_app.py  pyproject.toml  requirements-fastapi.txt  retrieval_agent.py  router_agent.py  sector_analysis_node.py  sector_keyplayers_subgraph.py  sector_market_data_subgraph.py  sector_trends_subgraph.py  sentiment_agent_subgraph.py  state.py  stock_agent_subgraph.py  test.py  test_Sentiment_Subgraph.py  test_planner.py  test_retrieval.py  test_retrieval_agent_integration.py  test_retrieval_agent_standalone.py  test_router.py  test_summarization_agent_integration.py  test_tools.py  test_yinance.py
agents/: __init__.py  base_agent.py  retrieval_agent.py  router_agent.py  summarization_agent.py
app/: main.py  tasks.py
app/core/: config.py
app/schemas/: task.py
config/: config.py
core/: prompts.py  tools.py
docs/: AGENTS.md  API.md  NODES.md  OVERVIEW.md  STATE.md  SUBGRAPHS.md
nodes/: __init__.py  company_analysis.py  report_generation_node.py  sector_analysis_node.py  sector_report_node.py
subgraphs/: competetior_anaysis_subgraph.py  retrieval_summarization_graph.py  sector_keyplayers_subgraph.py  sector_market_data_subgraph.py  sector_sentiment_subgraph.py  sector_trends_subgraph.py  sentiment_agent_subgraph.py  stock_agent_subgraph.py
tests/: test.py  test_Sentiment_Subgraph.py  test_planner.py  test_retrieval.py  test_retrieval_agent_integration.py  test_retrieval_agent_standalone.py  test_router.py  test_stock_data_subgraph_integration.py  test_summarization_agent.py
(+20 files in other folders)
