[project]
name = "financial-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.4.26",
    "duckduckgo-search>=8.0.1",
    "google-genai>=1.12.1",
    "langchain>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "strip-tags>=0.6",
    "tenacity>=9.1.2",
    "yfinance>=0.2.57",
]
[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test (requires network, potentially slow/flaky)",
]
